--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer-core": "^10.1.0",
-    "chrome-aws-lambda": "^10.1.0"
+    "cheerio": "1.0.0-rc.12",
+    "express": "^4.18.2"
   }
 }
